<resources>
    <string name="app_name">Lesson 12</string>
    <string name="change_lesson_9_data">Change lesson 9 dailyData</string>
    <string name="change_lesson_10_data">Change lesson 10 dailyData</string>
    <string name="use_id">Use id?</string>
    <string name="enter_id">Enter id</string>
    <string name="select_operation_type">Select operation type</string>
    <string name="select">Select</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>
